<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.view.main.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/homeLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:contentDescription="@string/logoString"
            android:src="@drawable/edrivers_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/pointsLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeLogo">

            <TextView
                android:id="@+id/totalPointsTextView"
                style="@style/Widget.MaterialComponents.TextView"
                android:layout_width="74dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:padding="5dp"
                tools:text="@string/pointsString"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/rankButton"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/secondary"
                android:includeFontPadding="false"
                android:paddingLeft="8dp"
                android:paddingTop="0dp"
                android:paddingRight="8dp"
                android:paddingBottom="0dp"
                android:text="@string/rankString"
                android:textAlignment="center"
                android:textSize="12sp" />

        </LinearLayout>

        <Button
            android:id="@+id/newLessonButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:padding="30dp"
            android:text="@string/newLessonString"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pointsLayout" />

        <Button
            android:id="@+id/lastLessonButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:padding="30dp"
            android:text="@string/lastLessonString"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newLessonButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>